--- a/Challenge1/Martin/Hacker1-Monitor/Hacker1-Monitor.csproj
+++ b/Challenge1/Martin/Hacker1-Monitor/Hacker1-Monitor.csproj
@@ -7,7 +7,7 @@
   </PropertyGroup>
 
   <ItemGroup>
-    <PackageReference Include="WindowsAzure.ServiceBus" Version="5.0.2" />
+    <PackageReference Include="Microsoft.Azure.ServiceBus" Version="3.2.0" />
   </ItemGroup>
 
 </Project>
